Se agrego la validacion de token en el filter y modifico el metodo validateToken para mandar una excepcion personalizada